Commit BDD complètement opérationnelle

--- a/masterpom/model/src/main/resources/model.properties
+++ b/masterpom/model/src/main/resources/model.properties
@@ -1,4 +1,9 @@
 #DB Connection Properties
-url=jdbc:mysql://localhost/jpublankproject?autoReconnect=true&useSSL=false
+url=jdbc:mysql://localhost/JAVA-Project?autoReconnect=true&useSSL=false
 login=root
 password=
+access=/cryptes/salle
+terminaison=.txt
+nberLevel=101
+hauteur=12
+longueur=20
