--- a/masterpom/.project
+++ b/masterpom/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>masterpom</name>
+	<name>z_masterpom</name>
 	<comment></comment>
 	<projects>
 	</projects>
