--- a/masterpom/view/.project
+++ b/masterpom/view/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>view</name>
+	<name>z_view</name>
 	<comment></comment>
 	<projects>
 	</projects>
