--- a/masterpom/model/.classpath
+++ b/masterpom/model/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="**|Sprite/|Sprite/" kind="src" output="target/classes" path="src/main/resources">
+	<classpathentry excluding="**|Sprite/|Sprite/|sprites/|sprites/|cryptes/|cryptes/" kind="src" output="target/classes" path="src/main/resources">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
